# missile_simulation

./: .gitignore  README.md
src/example_plugin/: CMakeLists.txt  package.xml
src/example_plugin/launch/: main.launch  main_earthquake.launch  main_modelpush.launch
src/example_plugin/src/: earthquake.cc  hello_world.cc  model_push.cc
src/example_plugin/worlds/: earthquake.world  model_push.world  simple_world.world
src/exocet_mm40_booster_description/: CMakeLists.txt  package.xml
src/exocet_mm40_booster_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/exocet_mm40_booster_description/meshes/: base_link.stl  fin_2.stl  fin_3.stl
src/exocet_mm40_booster_description/urdf/: exocet_mm40_booster.gazebo  exocet_mm40_booster.trans  exocet_mm40_booster.xacro  materials.xacro
src/exocet_mm40_description/: CMakeLists.txt  package.xml
src/exocet_mm40_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
src/exocet_mm40_description/meshes/: Booster_1.stl  FinHolder_1.stl  FinHolder_2.stl  FinHolder_3.stl  FinHolder_4.stl  Fin_1.stl  Fin_2.stl  Fin_3.stl  Fin_4.stl  Wing1_1.stl  Wing2_1.stl  Wing3_1.stl  Wing4_1.stl  base_link.stl
src/exocet_mm40_description/urdf/: exocetMM40.gazebo  exocetMM40.trans  exocetMM40.xacro  (+4 more)
src/exocet_mm40_main_description/: CMakeLists.txt  package.xml
src/exocet_mm40_tabs_description/: CMakeLists.txt  package.xml
src/exocet_mm40b3_description/: CMakeLists.txt  package.xml
src/exocet_msgs/: CMakeLists.txt  package.xml
src/generic_missile/: CMakeLists.txt  package.xml
src/joy_fins_driver/: CMakeLists.txt  package.xml
src/matlab_test_fkt/: CalculateAero.m  MoveMissilesAttribute.slx  foldwings.m  simpleGUI.m  unfoldwings.m  wings_fins_folding_test.m
src/missile_control_plugin/: CMakeLists.txt  package.xml
src/missile_control_plugin/src/: missile_control_plugin.cc  missile_control_plugin.hh
src/sim_environment/: CMakeLists.txt  package.xml
src/test_wingsfins_motion/: CMakeLists.txt  package.xml
(+77 files in other folders)
